In CSS, fixed text-overflow on display. In JS, added a 5 digit fix to decimal

--- a/style.css
+++ b/style.css
@@ -50,6 +50,9 @@ button:hover {
 #display {
   font-size: 1.5rem;
   text-align: right;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   width: 100%;
   height: 4rem;
   margin: 1rem auto;
